# server-client_multimetr

./: README.md
client/: Multimetr.cpp  Multimetr.h  SocketUnix.cpp  SocketUnix.h  Test24.pro  main.cpp  main.qml
server/: CMakeLists.txt  main.cpp  multimetr.cpp  multimetr.h  parsing_requests_to_multimetr.cpp  parsing_requests_to_multimetr.h  server_multimetr.cpp  server_multimetr.h  test_runner.h
